--- a/stack.yml
+++ b/stack.yml
@@ -1,9 +1,9 @@
 version: 1.0
 provider:
   name: openfaas
-  gateway: http://127.0.0.1:31112
+  gateway: http://system.openfaascloud.com
 functions:
-  hello-openfaas:
+  hello-python-faas:
     lang: python3
-    handler: ./hello-openfaas
-    image: cnaik/hello-openfaas:latest
+    handler: ./hello-python-faas
+    image: hello-python-faas:latest
