--- a/stack.yml
+++ b/stack.yml
@@ -1,9 +1,9 @@
 version: 1.0
 provider:
   name: openfaas
-  gateway: http://system.openfaascloud.com
+  gateway: http://127.0.0.1:8080
 functions:
-  hello-python-faas:
-    lang: python3
-    handler: ./hello-python-faas
-    image: hello-python-faas:latest
+  classic-go:
+    lang: go
+    handler: ./classic-go
+    image: classic-go:latest
