--- a/stack.yml
+++ b/stack.yml
@@ -3,7 +3,7 @@ provider:
   name: openfaas
   gateway: http://127.0.0.1:8080
 functions:
-  classic-go:
+  hello:
     lang: go
-    handler: ./classic-go
-    image: classic-go:latest
+    handler: ./hello
+    image: hello:latest
